# axum-bits

./: .gitignore  Cargo.toml  LICENSE  README.md  THANKS.md
axumbitslib/: Cargo.toml
axumbitslib/src/: lib.rs
axumbitslib/src/structs/: mod.rs  state_structs.rs  student_struct.rs
basic-extractors/: Cargo.toml
basic-extractors/src/: extract_struct.rs  extractors.rs  main.rs
basic-extractors/src/extractors/: extract_struct.rs  form.rs  json.rs  path.rs  query.rs
basic-responders/: Cargo.toml
basic-responders/src/: main.rs
basic-start/src/: main.rs
basics/: README.md
basics/extractors/: Cargo.toml
basics/extractors/src/: extractors.rs  responders.rs
basics/extractors/src/extractors/: form.rs  json.rs  path.rs  query.rs
basics/htmlfile/: Cargo.toml
basics/htmlfile/src/: main.rs
basics/htmlstatic/: Cargo.toml
basics/htmlstatic/pages/: 404.html
basics/htmlstatic/src/: main.rs
basics/logging/: Cargo.toml
basics/logging/pages/: index.html
basics/logging/src/: main.rs
basics/responders/: Cargo.toml
basics/start/: Cargo.toml
basics/start/src/: main.rs
basics/state/: Cargo.toml
basics/state/src/: main.rs
basics/state/src/state/: state_struct.rs
medium/state-modification/: Cargo.toml
medium/state-modification/src/: main.rs  state.rs
medium/state-modification/src/state/: state_struct.rs
tests/: tests.rs
