[workspace]

resolver = "2"
members = ["axumbitslib", "basics/*", "medium/*"]

[workspace.dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
axumbitslib = { path = "./axumbitslib" }
