[workspace]

resolver = "2"
members = ["axumbitslib", "basics/*", "medium/*"]

[workspace.dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
axumbitslib = { path = "./axumbitslib" }
