[workspace]

resolver = "2"
members = ["axumbitslib", "basics/*", "medium/*"]

[workspace.dependencies]
axum = "0.7.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
axumbitslib = { path = "./axumbitslib" }
